--- a/package.json
+++ b/package.json
@@ -27,15 +27,28 @@
   },
   "private": true,
   "dependencies": {
+    "@wildboar/x500": "^1.0.1",
+    "asn1-ts": "^5.0.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@nrwl/cli": "11.6.3",
-    "@nrwl/tao": "11.6.3",
-    "@nrwl/workspace": "11.6.3",
+    "@nrwl/cli": "12.3.6",
+    "@nrwl/eslint-plugin-nx": "12.3.6",
+    "@nrwl/jest": "12.3.6",
+    "@nrwl/linter": "12.3.6",
+    "@nrwl/node": "12.3.6",
+    "@nrwl/tao": "12.3.6",
+    "@nrwl/workspace": "12.3.6",
+    "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "26.2.2",
     "prettier": "2.2.1",
+    "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
     "typescript": "~4.0.3"
   }
