--- a/.editorconfig
+++ b/.editorconfig
@@ -3,11 +3,20 @@ root = true
 
 [*]
 charset = utf-8
+end_of_line = crlf
+indent_size = 4
 indent_style = space
-indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.md]
-max_line_length = off
-trim_trailing_whitespace = false
+[Makefile]
+indent_size = 4
+indent_style = tab
+end_of_line = lf
+
+[*.{sh,bash}]
+indent_size = 4
+end_of_line = lf
+
+[*.{yml,yaml}]
+indent_size = 2
