--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nrwl/workspace": "12.3.6",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
     "dotenv": "8.2.0",
