--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=4632
 LDAP_PORT=1389
-DATABASE_URL=postgresql://postgres:example@postgres:5432/directory?schema=public
-# DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
+# DATABASE_URL=postgresql://postgres:example@postgres:5432/directory?schema=public
+DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
