Implement most of LDAP
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: example
+    # network_mode: host
     ports:
       - '5432:5432/tcp'
     volumes:
