--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-PORT=4632
+# PORT=4632
+IDM_PORT=4632
 LDAP_PORT=1389
+# LDAPS_PORT=1636
+LDAPS_PORT=6637
 # DATABASE_URL=postgresql://postgres:example@postgres:5432/directory?schema=public
 DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
+ROOT_DSE_PASSWORD=password
+SERVER_TLS_CERT=cert.pem
+SERVER_TLS_KEY=key.pem
