--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=publi
 ROOT_DSE_PASSWORD=password
 SERVER_TLS_CERT=cert.pem
 SERVER_TLS_KEY=key.pem
+AAP=C=US
