--- a/package.json
+++ b/package.json
@@ -27,34 +27,35 @@
   },
   "private": true,
   "dependencies": {
-    "@prisma/client": "^2.25.0",
-    "@wildboar/ldap": "^1.1.2",
+    "@prisma/client": "^2.26.0",
+    "@wildboar/ldap": "^1.1.3",
     "@wildboar/scrypt-0": "^1.0.0",
-    "@wildboar/x500": "^1.0.1",
+    "@wildboar/x500": "^1.0.7",
     "asn1-ts": "^5.0.3",
-    "tslib": "^2.0.0"
+    "tslib": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nrwl/cli": "12.3.6",
-    "@nrwl/eslint-plugin-nx": "12.3.6",
-    "@nrwl/jest": "12.3.6",
-    "@nrwl/linter": "12.3.6",
-    "@nrwl/node": "12.3.6",
-    "@nrwl/tao": "12.3.6",
-    "@nrwl/workspace": "12.3.6",
-    "@types/jest": "26.0.8",
-    "@types/node": "14.14.33",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
-    "dotenv": "8.2.0",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
-    "jest": "26.2.2",
-    "prettier": "2.2.1",
-    "prisma": "^2.25.0",
-    "ts-jest": "26.5.5",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.0.3"
+    "@nrwl/cli": "12.5.4",
+    "@nrwl/eslint-plugin-nx": "12.5.4",
+    "@nrwl/jest": "12.5.4",
+    "@nrwl/linter": "12.5.4",
+    "@nrwl/node": "12.5.4",
+    "@nrwl/tao": "12.5.4",
+    "@nrwl/workspace": "12.5.4",
+    "@types/jest": "26.0.23",
+    "@types/node": "16.0.0",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "4.28.1",
+    "@typescript-eslint/parser": "4.28.1",
+    "dotenv": "10.0.0",
+    "eslint": "7.30.0",
+    "eslint-config-prettier": "8.3.0",
+    "jest": "27.0.6",
+    "prettier": "2.3.2",
+    "prisma": "^2.26.0",
+    "ts-jest": "27.0.3",
+    "ts-node": "~10.0.0",
+    "typescript": "~4.3.5"
   }
 }
