--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,9 @@
     {
       "files": ["*.js", "*.jsx"],
       "extends": ["plugin:@nrwl/nx/javascript"],
-      "rules": {}
+      "rules": {
+          "no-inner-declarations": "off"
+      }
     }
   ]
 }
