Finish DSE refactor
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
       "extends": ["plugin:@nrwl/nx/typescript"],
       "rules": {
         "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-empty-interface": "off"
       }
     },
     {
