--- a/package.json
+++ b/package.json
@@ -23,15 +23,29 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\""
   },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^8.0.4",
+    "@nestjs/config": "^1.0.0",
+    "@nestjs/core": "^8.0.4",
+    "@nestjs/platform-express": "^8.0.4",
+    "@nestjs/swagger": "^5.0.4",
+    "@nestjs/terminus": "^7.2.0",
     "@prisma/client": "^2.26.0",
+    "@types/express": "^4.17.13",
     "@wildboar/ldap": "^1.2.0",
     "@wildboar/scrypt-0": "^1.0.0",
     "@wildboar/x500": "^1.0.8",
     "asn1-ts": "^5.3.2",
+    "hbs": "^4.1.2",
+    "i18next": "^20.3.4",
+    "i18next-fs-backend": "^1.1.1",
+    "is-debugging": "^1.0.1",
+    "os-locale": "^5.0.0",
+    "swagger-ui-express": "^4.1.6",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2"
   },
@@ -44,7 +58,7 @@
     "@nrwl/tao": "12.5.7",
     "@nrwl/workspace": "12.5.7",
     "@types/jest": "26.0.24",
-    "@types/node": "16.3.1",
+    "@types/node": "^16.3.1",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
