--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@nestjs/swagger": "^5.0.4",
     "@nestjs/terminus": "^7.2.0",
     "@prisma/client": "^2.26.0",
+    "@types/escape-html": "^1.0.1",
     "@types/express": "^4.17.13",
     "@wildboar/ldap": "^1.2.0",
     "@wildboar/scrypt-0": "^1.0.0",
     "@wildboar/x500": "^1.0.8",
     "asn1-ts": "^5.3.2",
+    "escape-html": "^1.0.3",
     "hbs": "^4.1.2",
     "i18next": "^20.3.4",
     "i18next-fs-backend": "^1.1.1",
