--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "i18next-fs-backend": "^1.1.1",
     "is-debugging": "^1.0.1",
     "os-locale": "^5.0.0",
+    "sloc": "^0.2.1",
     "swagger-ui-express": "^4.1.6",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2"
