--- a/package.json
+++ b/package.json
@@ -41,17 +41,22 @@
     "@wildboar/scrypt-0": "^1.0.0",
     "@wildboar/x500": "^1.0.8",
     "asn1-ts": "^5.3.2",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "date-fns": "^2.23.0",
     "escape-html": "^1.0.3",
     "hbs": "^4.1.2",
+    "i18n-iso-countries": "^6.8.0",
     "i18next": "^20.3.4",
     "i18next-fs-backend": "^1.1.1",
     "is-debugging": "^1.0.1",
     "os-locale": "^5.0.0",
+    "reflect-metadata": "^0.1.13",
     "sloc": "^0.2.1",
     "swagger-ui-express": "^4.1.6",
     "tslib": "^2.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
     "@nrwl/cli": "12.5.7",
@@ -64,6 +69,7 @@
     "@types/jest": "26.0.24",
     "@types/node": "^16.3.1",
     "@types/uuid": "^8.3.1",
+    "@types/yargs": "^16.0.4",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
     "dotenv": "10.0.0",
@@ -72,6 +78,7 @@
     "jest": "27.0.6",
     "prettier": "2.3.2",
     "prisma": "^2.26.0",
+    "rxjs": "^7.3.0",
     "ts-jest": "27.0.3",
     "ts-node": "~10.1.0",
     "typescript": "~4.3.5"
