Get seed-countries barely working
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ IDM_PORT=4632
 LDAP_PORT=1389
 # LDAPS_PORT=1636
 LDAPS_PORT=6637
-DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
+# DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
+DATABASE_URL=mysql://root:example@localhost:3306/directory
 ROOT_DSE_PASSWORD=password
 SERVER_TLS_CERT=cert.pem
 SERVER_TLS_KEY=key.pem
