Implement x500-cli search new command
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-node",
             "request": "attach",
             "port": 24010,
-            "name": "Attach",
+            "name": "Attach to Meerkat",
             "skipFiles": [
                 "<node_internals>/**"
             ],
