Implement SecurityParameters for most responses and requests
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DATABASE_URL=mysql://root:example@localhost:3306/directory
 ROOT_DSE_PASSWORD=password
 SERVER_TLS_CERT=cert.pem
 SERVER_TLS_KEY=key.pem
+SIGNING_CERT_CHAIN=cert.pem
+SIGNING_KEY=key.pem
