--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "i18next-fs-backend": "^1.1.1",
     "is-debugging": "^1.0.1",
     "os-locale": "^5.0.0",
+    "pem-ts": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "sloc": "^0.2.1",
     "swagger-ui-express": "^4.1.6",
