--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@wildboar/scrypt-0": "^1.0.0",
     "@wildboar/x500": "^1.0.16",
     "asn1-ts": "^5.3.2",
+    "axios": "^0.21.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "date-fns": "^2.23.0",
