Generate telemetry; update checking; killswitch; email signup
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ SERVER_TLS_CERT=cert.pem
 SERVER_TLS_KEY=key.pem
 SIGNING_CERT_CHAIN=cert.pem
 SIGNING_KEY=key.pem
+SENTINEL_DOMAIN=google.com
+ADMINISTRATOR_EMAIL=jonathan@wilbur.space
+INIT_JS=init.js
