--- a/apps/meerkat/tsconfig.app.json
+++ b/apps/meerkat/tsconfig.app.json
@@ -4,7 +4,8 @@
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
     "types": ["node"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "exclude": ["**/*.spec.ts"],
   "include": ["**/*.ts"]
