Mostly implement LDAP
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/nx.json
+++ b/nx.json
@@ -23,10 +23,13 @@
     }
   },
   "projects": {
-    "meerkat": {
+    "idm": {
       "tags": []
     },
-    "idm": {
+    "ldap-socket": {
+      "tags": []
+    },
+    "meerkat": {
       "tags": []
     },
     "x500-cli": {
