--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
       "rules": {
         "@typescript-eslint/no-inferrable-types": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/no-empty-interface": "off"
+        "@typescript-eslint/no-empty-interface": "off",
+        "@typescript-eslint/no-empty-function": "off"
       }
     },
     {
