--- a/package.json
+++ b/package.json
@@ -1,89 +1,91 @@
 {
-  "name": "directory",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "nx": "nx",
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test",
-    "lint": "nx workspace-lint && nx lint",
-    "e2e": "nx e2e",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
-    "line-count": "npx sloc --exclude 'node_modules/.*' libs apps"
-  },
-  "private": true,
-  "dependencies": {
-    "@nestjs/common": "^8.0.4",
-    "@nestjs/config": "^1.0.0",
-    "@nestjs/core": "^8.0.4",
-    "@nestjs/platform-express": "^8.0.4",
-    "@nestjs/swagger": "^5.0.4",
-    "@nestjs/terminus": "^7.2.0",
-    "@prisma/client": "^2.30.0",
-    "@types/escape-html": "^1.0.1",
-    "@types/express": "^4.17.13",
-    "@wildboar/ldap": "^1.2.1",
-    "@wildboar/scrypt-0": "^1.0.0",
-    "@wildboar/x500": "^1.0.16",
-    "asn1-ts": "^5.3.2",
-    "axios": "^0.21.1",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "date-fns": "^2.23.0",
-    "escape-html": "^1.0.3",
-    "hbs": "^4.1.2",
-    "i18n-iso-countries": "^6.8.0",
-    "i18next": "^20.3.4",
-    "i18next-fs-backend": "^1.1.1",
-    "is-debugging": "^1.0.1",
-    "os-locale": "^5.0.0",
-    "pem-ts": "^2.0.1",
-    "reflect-metadata": "^0.1.13",
-    "sloc": "^0.2.1",
-    "swagger-ui-express": "^4.1.6",
-    "tslib": "^2.3.0",
-    "uuid": "^8.3.2",
-    "yargs": "^15.4.1"
-  },
-  "devDependencies": {
-    "@nrwl/cli": "12.5.7",
-    "@nrwl/eslint-plugin-nx": "12.5.7",
-    "@nrwl/jest": "12.5.7",
-    "@nrwl/linter": "12.5.7",
-    "@nrwl/node": "12.5.7",
-    "@nrwl/tao": "12.5.7",
-    "@nrwl/workspace": "12.5.7",
-    "@types/jest": "26.0.24",
-    "@types/node": "^16.3.1",
-    "@types/uuid": "^8.3.1",
-    "@types/yargs": "^16.0.4",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
-    "dotenv": "10.0.0",
-    "eslint": "7.30.0",
-    "eslint-config-prettier": "8.3.0",
-    "jest": "27.0.6",
-    "prettier": "2.3.2",
-    "prisma": "^2.30.0",
-    "rxjs": "^7.3.0",
-    "ts-jest": "27.0.3",
-    "ts-node": "~10.1.0",
-    "typescript": "~4.3.5"
-  }
+    "name": "directory",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "nx": "nx",
+        "start": "nx serve",
+        "build": "nx build",
+        "test": "nx test",
+        "lint": "nx workspace-lint && nx lint",
+        "e2e": "nx e2e",
+        "affected:apps": "nx affected:apps",
+        "affected:libs": "nx affected:libs",
+        "affected:build": "nx affected:build",
+        "affected:e2e": "nx affected:e2e",
+        "affected:test": "nx affected:test",
+        "affected:lint": "nx affected:lint",
+        "affected:dep-graph": "nx affected:dep-graph",
+        "affected": "nx affected",
+        "format": "nx format:write",
+        "format:write": "nx format:write",
+        "format:check": "nx format:check",
+        "update": "nx migrate latest",
+        "workspace-generator": "nx workspace-generator",
+        "dep-graph": "nx dep-graph",
+        "help": "nx help",
+        "line-count": "npx sloc --exclude 'node_modules/.*' libs apps"
+    },
+    "private": true,
+    "dependencies": {
+        "@nestjs/common": "^8.0.4",
+        "@nestjs/config": "^1.0.0",
+        "@nestjs/core": "^8.0.4",
+        "@nestjs/platform-express": "^8.0.4",
+        "@nestjs/swagger": "^5.0.4",
+        "@nestjs/terminus": "^7.2.0",
+        "@prisma/client": "^3.1.1",
+        "@types/escape-html": "^1.0.1",
+        "@types/express": "^4.17.13",
+        "@wildboar/ldap": "^1.2.1",
+        "@wildboar/scrypt-0": "^1.0.0",
+        "@wildboar/x500": "^1.0.16",
+        "asn1-ts": "^5.3.2",
+        "axios": "^0.21.1",
+        "class-transformer": "^0.4.0",
+        "class-validator": "^0.13.1",
+        "date-fns": "^2.23.0",
+        "escape-html": "^1.0.3",
+        "hbs": "^4.1.2",
+        "i18n-iso-countries": "^6.8.0",
+        "i18next": "^20.3.4",
+        "i18next-fs-backend": "^1.1.1",
+        "is-debugging": "^1.0.1",
+        "os-locale": "^5.0.0",
+        "pem-ts": "^2.0.1",
+        "reflect-metadata": "^0.1.13",
+        "sloc": "^0.2.1",
+        "swagger-ui-express": "^4.1.6",
+        "tslib": "^2.3.0",
+        "uuid": "^8.3.2",
+        "yargs": "^15.4.1"
+    },
+    "devDependencies": {
+        "@nrwl/cli": "12.5.7",
+        "@nrwl/eslint-plugin-nx": "12.5.7",
+        "@nrwl/jest": "12.5.7",
+        "@nrwl/linter": "12.5.7",
+        "@nrwl/node": "12.5.7",
+        "@nrwl/tao": "12.5.7",
+        "@nrwl/workspace": "12.5.7",
+        "@types/jest": "26.0.24",
+        "@types/node": "^16.3.1",
+        "@types/uuid": "^8.3.1",
+        "@types/yargs": "^16.0.4",
+        "@typescript-eslint/eslint-plugin": "4.28.2",
+        "@typescript-eslint/parser": "4.28.2",
+        "dotenv": "10.0.0",
+        "eslint": "7.30.0",
+        "eslint-config-prettier": "8.3.0",
+        "jest": "27.0.6",
+        "prettier": "2.3.2",
+        "prisma": "^3.1.1",
+        "rxjs": "^7.3.0",
+        "ts-jest": "27.0.3",
+        "ts-node": "~10.1.0",
+        "typescript": "~4.3.5"
+    },
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
+    }
 }
