--- a/.env
+++ b/.env
@@ -1,15 +1,13 @@
-WEB_ADMIN_PORT=18080
-IDM_PORT=4632
-LDAP_PORT=1389
-# LDAPS_PORT=1636
-LDAPS_PORT=6637
 # DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
 DATABASE_URL=mysql://root:example@localhost:3306/directory
-ROOT_DSE_PASSWORD=password
-SERVER_TLS_CERT=cert.pem
-SERVER_TLS_KEY=key.pem
-SIGNING_CERT_CHAIN=cert.pem
-SIGNING_KEY=key.pem
-SENTINEL_DOMAIN=google.com
-ADMINISTRATOR_EMAIL=jonathan@wilbur.space
-INIT_JS=init.js
+MEERKAT_WEB_ADMIN_PORT=18080
+MEERKAT_IDM_PORT=4632
+MEERKAT_LDAP_PORT=1389
+# MEERKAT_LDAPS_PORT=1636
+MEERKAT_SERVER_TLS_CERT=cert.pem
+MEERKAT_SERVER_TLS_KEY=key.pem
+MEERKAT_SIGNING_CERT_CHAIN=cert.pem
+MEERKAT_SIGNING_KEY=key.pem
+MEERKAT_SENTINEL_DOMAIN=google.com
+MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
+MEERKAT_INIT_JS=init.js
