--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "swagger-ui-express": "^4.1.6",
         "tslib": "^2.3.0",
         "uuid": "^8.3.2",
+        "winston": "^3.3.3",
         "yargs": "^15.4.1"
     },
     "devDependencies": {
