--- a/apps/meerkat/tsconfig.spec.json
+++ b/apps/meerkat/tsconfig.spec.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
