Approximate matching rules; aliasDereferenced; most of subtreeSpec parsing
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ MEERKAT_SIGNING_KEY=key.pem
 MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
 MEERKAT_INIT_JS=init.js
+NODE_ENV=development
