--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "class-validator": "^0.13.1",
         "date-fns": "^2.23.0",
         "escape-html": "^1.0.3",
+        "fast-levenshtein": "^2.0.6",
         "hbs": "^4.1.2",
         "i18n-iso-countries": "^6.8.0",
         "i18next": "^20.3.4",
@@ -70,8 +71,10 @@
         "@nrwl/node": "12.5.7",
         "@nrwl/tao": "12.5.7",
         "@nrwl/workspace": "12.5.7",
+        "@types/fast-levenshtein": "^0.0.2",
         "@types/jest": "26.0.24",
         "@types/node": "^16.3.1",
+        "@types/safe-regex": "^1.1.3",
         "@types/uuid": "^8.3.1",
         "@types/yargs": "^16.0.4",
         "@typescript-eslint/eslint-plugin": "4.28.2",
@@ -83,6 +86,7 @@
         "prettier": "2.3.2",
         "prisma": "^3.1.1",
         "rxjs": "^7.3.0",
+        "safe-regex": "^1.1.0",
         "ts-jest": "27.0.3",
         "ts-node": "~10.1.0",
         "typescript": "~4.3.5"
