Implement several LDAP features and controls
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -11,4 +11,5 @@ MEERKAT_SIGNING_KEY=key.pem
 MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
 MEERKAT_INIT_JS=init.js
+MEERKAT_BULK_INSERT_MODE=1
 NODE_ENV=development
