Implement bind for DOP and fix timing attack vuln
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -12,4 +12,9 @@ MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
 MEERKAT_INIT_JS=init.js
 MEERKAT_BULK_INSERT_MODE=1
+# There is no point in having different bind sleeps for different protocols,
+# because a nefarious attacker could just pick the protocol with the smallest
+# sleep and try to authenticate against that.
+MEERKAT_BIND_MIN_SLEEP_MS=1000
+MEERKAT_BIND_SLEEP_RANGE_MS=3000
 NODE_ENV=development
