--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ MEERKAT_SIGNING_CERT_CHAIN=cert.pem
 MEERKAT_SIGNING_KEY=key.pem
 MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
-# MEERKAT_INIT_JS=init.js
+MEERKAT_INIT_JS=./init.mjs
 MEERKAT_BULK_INSERT_MODE=1
 # There is no point in having different bind sleeps for different protocols,
 # because a nefarious attacker could just pick the protocol with the smallest
