--- a/package.json
+++ b/package.json
@@ -64,32 +64,33 @@
     "yargs": "^15.4.1"
   },
   "devDependencies": {
-    "@nrwl/cli": "12.5.7",
-    "@nrwl/eslint-plugin-nx": "12.5.7",
-    "@nrwl/jest": "12.5.7",
-    "@nrwl/linter": "12.5.7",
-    "@nrwl/node": "12.5.7",
-    "@nrwl/tao": "12.5.7",
-    "@nrwl/workspace": "12.5.7",
+    "@nrwl/cli": "13.1.2",
+    "@nrwl/eslint-plugin-nx": "13.1.2",
+    "@nrwl/jest": "13.1.2",
+    "@nrwl/linter": "13.1.2",
+    "@nrwl/node": "13.1.2",
+    "@nrwl/nx-cloud": "^12.5.1",
+    "@nrwl/tao": "13.1.2",
+    "@nrwl/workspace": "13.1.2",
     "@types/fast-levenshtein": "^0.0.2",
-    "@types/jest": "26.0.24",
+    "@types/jest": "27.0.2",
     "@types/node": "^16.3.1",
     "@types/safe-regex": "^1.1.3",
     "@types/uuid": "^8.3.1",
     "@types/yargs": "^16.0.4",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "dotenv": "10.0.0",
-    "eslint": "7.30.0",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
-    "jest": "27.0.6",
+    "jest": "27.2.3",
     "prettier": "2.3.2",
     "prisma": "^3.3.0",
     "rxjs": "^7.3.0",
     "safe-regex": "^1.1.0",
-    "ts-jest": "27.0.3",
+    "ts-jest": "27.0.5",
     "ts-node": "~10.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "4.3.5"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
