Implement update checking and bulk insert mode
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "passport": "^0.4.1",
     "pem-ts": "^2.0.1",
     "reflect-metadata": "^0.1.13",
+    "semver": "^7.3.4",
     "sloc": "^0.2.1",
     "swagger-ui-express": "^4.1.6",
     "tslib": "^2.3.0",
@@ -76,6 +77,7 @@
     "@types/jest": "27.0.2",
     "@types/node": "^16.3.1",
     "@types/safe-regex": "^1.1.3",
+    "@types/semver": "^7.3.9",
     "@types/uuid": "^8.3.1",
     "@types/yargs": "^16.0.4",
     "@typescript-eslint/eslint-plugin": "4.33.0",
