Support big integers
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -17,4 +17,5 @@ MEERKAT_INIT_JS=./init.mjs
 # sleep and try to authenticate against that.
 MEERKAT_BIND_MIN_SLEEP_MS=1000
 MEERKAT_BIND_SLEEP_RANGE_MS=3000
+MEERKAT_MIN_AUTH_LEVEL_FOR_OB=128
 NODE_ENV=development
