--- a/.env
+++ b/.env
@@ -19,4 +19,5 @@ MEERKAT_BIND_MIN_SLEEP_MS=1000
 MEERKAT_BIND_SLEEP_RANGE_MS=3000
 MEERKAT_MIN_AUTH_LEVEL_FOR_OB=1
 MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_OB=128
+MEERKAT_MY_ACCESS_POINT_NSAPS=idm://demo.meerkat.wildboar.software:4632 ldap://demo.meerkat.wildboar.software:1389
 NODE_ENV=development
