--- a/.env
+++ b/.env
@@ -22,4 +22,6 @@ MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_OB=128
 MEERKAT_MY_ACCESS_POINT_NSAPS=idm://demo.meerkat.wildboar.software:4632 ldap://demo.meerkat.wildboar.software:1389
 MEERKAT_USE_DATABASE_WHEN_THERE_ARE_X_SUBORDINATES=1000
 MEERKAT_ENTRIES_PER_SUBORDINATES_PAGE=100
+MEERKAT_TRANSCODE_VALUES_TO_DER=1
+MEERKAT_TRANSCODE_DISTINGUISHED_VALUES_TO_DER=1
 NODE_ENV=development
