--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "os-locale": "^5.0.0",
     "passport": "^0.4.1",
     "pem-ts": "^3.0.0",
+    "phone": "^3.1.10",
     "reflect-metadata": "^0.1.13",
     "semver": "^7.3.4",
     "sloc": "^0.2.1",
