Deploy via docker
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -4,13 +4,13 @@ MEERKAT_WEB_ADMIN_PORT=18080
 MEERKAT_IDM_PORT=4632
 MEERKAT_LDAP_PORT=1389
 # MEERKAT_LDAPS_PORT=1636
-MEERKAT_SERVER_TLS_CERT=cert.pem
-MEERKAT_SERVER_TLS_KEY=key.pem
-MEERKAT_SIGNING_CERT_CHAIN=cert.pem
-MEERKAT_SIGNING_KEY=key.pem
+MEERKAT_SERVER_TLS_CERT=data/keypair/cert.pem
+MEERKAT_SERVER_TLS_KEY=data/keypair/key.pem
+MEERKAT_SIGNING_CERT_CHAIN=data/keypair/cert.pem
+MEERKAT_SIGNING_KEY=data/keypair/key.pem
 MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
-MEERKAT_INIT_JS=./init.mjs
+MEERKAT_INIT_JS=data/init.mjs
 # MEERKAT_BULK_INSERT_MODE=1
 # There is no point in having different bind sleeps for different protocols,
 # because a nefarious attacker could just pick the protocol with the smallest
@@ -25,3 +25,12 @@ MEERKAT_ENTRIES_PER_SUBORDINATES_PAGE=100
 MEERKAT_TRANSCODE_VALUES_TO_DER=1
 MEERKAT_TRANSCODE_DISTINGUISHED_VALUES_TO_DER=1
 NODE_ENV=development
+# https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
+# LC_COLLATE=""
+# LC_CTYPE=""
+# LC_MONETARY=""
+# LC_NUMERIC=""
+# LC_TIME=""
+LC_MESSAGES=en_US.utf8
+LC_ALL=en_US.utf8
+LANG=en_US.utf8
