--- a/apps/meerkat/package.json
+++ b/apps/meerkat/package.json
@@ -12,10 +12,10 @@
             "url": "https://github.com/JonathanWilbur"
         }
     ],
-    "version": "1.0.0-beta.1",
+    "version": "1.0.0-beta.2",
     "license": "MIT",
     "bin": {
-        "meerkat": "./src/start-meerkat"
+        "meerkat": "./start-meerkat"
     },
     "keywords": [
         "X.500",
