Fix root DSE attributes and int too big GraphQL error
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
                 "<node_internals>/**"
             ],
             "outFiles": [
-                "${workspaceFolder}/**/*.js"
+                "${workspaceFolder}/dist/apps/meerkat/**/*.js"
             ]
         }
     ]
