--- a/apps/meerkat/package.json
+++ b/apps/meerkat/package.json
@@ -12,7 +12,7 @@
             "url": "https://github.com/JonathanWilbur"
         }
     ],
-    "version": "1.0.0-beta.2",
+    "version": "1.0.0-beta.5",
     "license": "MIT",
     "bin": {
         "meerkat": "./start-meerkat"
@@ -29,5 +29,8 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/Wildboar-Software/directory.git"
+    },
+    "prisma": {
+        "seed": "ts-node src/prisma/seed.ts"
     }
 }
