--- a/apps/meerkat/tsconfig.app.json
+++ b/apps/meerkat/tsconfig.app.json
@@ -7,6 +7,6 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.spec.ts","src/prisma/seed.ts","**/seed.ts", "seed.ts"],
   "include": ["**/*.ts"]
 }
