--- a/package.json
+++ b/package.json
@@ -96,6 +96,6 @@
     "typescript": "4.3.5"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} apps/meerkat/src/prisma/seed.ts"
   }
 }
