Implement basic functional testing and fix bugs
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,8 @@
         "paths": {
             "@wildboar/idm": ["libs/idm/src/index.ts"],
             "@wildboar/ldap-socket": ["libs/ldap-socket/src/index.ts"],
-            "@wildboar/meerkat-types": ["libs/meerkat-types/src/index.ts"]
+            "@wildboar/meerkat-types": ["libs/meerkat-types/src/index.ts"],
+            "x500-functional-tests": ["libs/x500-functional-tests/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp"]
