--- a/.editorconfig
+++ b/.editorconfig
@@ -18,8 +18,9 @@ end_of_line = lf
 indent_size = 4
 end_of_line = lf
 
-[*.{yml,yaml,md}]
+[*.{yml,yaml,md,prisma}]
 indent_size = 2
+indent_style = space
 
 [*.pem]
 end_of_line = unset
