--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
         "@types/yargs": "^16.0.4",
         "@typescript-eslint/eslint-plugin": "4.33.0",
         "@typescript-eslint/parser": "4.33.0",
-        "dotenv": "10.0.0",
+        "dotenv": "^10.0.0",
         "eslint": "7.32.0",
         "eslint-config-prettier": "8.3.0",
         "jest": "27.2.3",
