--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "i18next": "^20.3.4",
         "i18next-fs-backend": "^1.1.1",
         "is-debugging": "^1.0.1",
+        "js-yaml": "^4.1.0",
         "os-locale": "^5.0.0",
         "passport": "^0.4.1",
         "pem-ts": "^3.0.0",
@@ -76,6 +77,8 @@
         "@nrwl/workspace": "13.1.2",
         "@types/fast-levenshtein": "^0.0.2",
         "@types/jest": "27.0.2",
+        "@types/js-yaml": "^4.0.5",
+        "@types/json-schema": "^7.0.9",
         "@types/node": "^16.3.1",
         "@types/safe-regex": "^1.1.3",
         "@types/semver": "^7.3.9",
@@ -87,6 +90,7 @@
         "eslint": "7.32.0",
         "eslint-config-prettier": "8.3.0",
         "jest": "27.2.3",
+        "json-schema-to-typescript": "^10.1.5",
         "prettier": "2.3.2",
         "prisma": "^3.7.0",
         "rxjs": "^7.3.0",
