--- a/.env
+++ b/.env
@@ -24,6 +24,7 @@ MEERKAT_USE_DATABASE_WHEN_THERE_ARE_X_SUBORDINATES=1000
 MEERKAT_ENTRIES_PER_SUBORDINATES_PAGE=100
 MEERKAT_TRANSCODE_VALUES_TO_DER=1
 MEERKAT_TRANSCODE_DISTINGUISHED_VALUES_TO_DER=1
+MEERKAT_OPEN_TOP_LEVEL=1
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
 # LC_COLLATE=""
