Fix a few bugs and tech debt; update deps
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/package.json
+++ b/package.json
@@ -1,107 +1,105 @@
 {
-    "name": "directory",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "nx": "nx",
-        "start": "nx serve",
-        "build": "nx build",
-        "test": "nx test",
-        "lint": "nx workspace-lint && nx lint",
-        "e2e": "nx e2e",
-        "affected:apps": "nx affected:apps",
-        "affected:libs": "nx affected:libs",
-        "affected:build": "nx affected:build",
-        "affected:e2e": "nx affected:e2e",
-        "affected:test": "nx affected:test",
-        "affected:lint": "nx affected:lint",
-        "affected:dep-graph": "nx affected:dep-graph",
-        "affected": "nx affected",
-        "format": "nx format:write",
-        "format:write": "nx format:write",
-        "format:check": "nx format:check",
-        "update": "nx migrate latest",
-        "workspace-generator": "nx workspace-generator",
-        "dep-graph": "nx dep-graph",
-        "help": "nx help",
-        "line-count": "npx sloc --exclude 'node_modules/.*' libs apps"
-    },
-    "private": true,
-    "dependencies": {
-        "@nestjs/common": "^8.0.4",
-        "@nestjs/config": "^1.0.0",
-        "@nestjs/core": "^8.0.4",
-        "@nestjs/platform-express": "^8.0.4",
-        "@nestjs/swagger": "^5.0.4",
-        "@nestjs/terminus": "^8.0.0",
-        "@prisma/client": "^3.7.0",
-        "@types/escape-html": "^1.0.1",
-        "@types/express": "^4.17.13",
-        "@wildboar/ldap": "^1.2.7",
-        "@wildboar/scrypt-0": "^1.0.2",
-        "@wildboar/x500": "^1.0.35",
-        "asn1-ts": "^7.0.1",
-        "axios": "^0.21.1",
-        "chalk": "^4.1.2",
-        "class-transformer": "^0.4.0",
-        "class-validator": "^0.13.1",
-        "date-fns": "^2.23.0",
-        "escape-html": "^1.0.3",
-        "fast-levenshtein": "^2.0.6",
-        "hbs": "^4.1.2",
-        "i18n-iso-countries": "^6.8.0",
-        "i18next": "^20.3.4",
-        "i18next-fs-backend": "^1.1.1",
-        "is-debugging": "^1.0.1",
-        "js-yaml": "^4.1.0",
-        "lodash": "^4.17.21",
-        "os-locale": "^5.0.0",
-        "passport": "^0.4.1",
-        "pem-ts": "^3.0.0",
-        "phone": "^3.1.10",
-        "reflect-metadata": "^0.1.13",
-        "semver": "^7.3.4",
-        "sloc": "^0.2.1",
-        "swagger-ui-express": "^4.1.6",
-        "tslib": "^2.3.0",
-        "uuid": "^8.3.2",
-        "winston": "^3.3.3",
-        "yargs": "^15.4.1"
-    },
-    "devDependencies": {
-        "@nrwl/cli": "13.1.2",
-        "@nrwl/eslint-plugin-nx": "13.1.2",
-        "@nrwl/jest": "13.1.2",
-        "@nrwl/linter": "13.1.2",
-        "@nrwl/node": "13.1.2",
-        "@nrwl/nx-cloud": "^12.5.1",
-        "@nrwl/tao": "13.1.2",
-        "@nrwl/workspace": "13.1.2",
-        "@types/fast-levenshtein": "^0.0.2",
-        "@types/jest": "27.0.2",
-        "@types/js-yaml": "^4.0.5",
-        "@types/json-schema": "^7.0.9",
-        "@types/node": "^16.3.1",
-        "@types/safe-regex": "^1.1.3",
-        "@types/semver": "^7.3.9",
-        "@types/uuid": "^8.3.1",
-        "@types/yargs": "^16.0.4",
-        "@typescript-eslint/eslint-plugin": "4.33.0",
-        "@typescript-eslint/parser": "4.33.0",
-        "dotenv": "^10.0.0",
-        "eslint": "7.32.0",
-        "eslint-config-prettier": "8.3.0",
-        "jest": "27.2.3",
-        "json-schema-to-typescript": "^10.1.5",
-        "prettier": "2.3.2",
-        "prisma": "^3.7.0",
-        "rxjs": "^7.3.0",
-        "safe-regex": "^1.1.0",
-        "ts-jest": "27.0.5",
-        "ts-node": "~10.1.0",
-        "typescript": "4.3.5"
-    },
-    "prisma": {
-        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} apps/meerkat/src/prisma/seed.ts"
-    }
+  "name": "directory",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "nx": "nx",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "lint": "nx workspace-lint && nx lint",
+    "e2e": "nx e2e",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "nx migrate latest",
+    "workspace-generator": "nx workspace-generator",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help",
+    "line-count": "npx sloc --exclude 'node_modules/.*' libs apps"
+  },
+  "private": true,
+  "dependencies": {
+    "@nestjs/common": "^8.2.4",
+    "@nestjs/config": "^1.1.6",
+    "@nestjs/core": "^8.2.4",
+    "@nestjs/platform-express": "^8.2.4",
+    "@nestjs/swagger": "^5.1.5",
+    "@nestjs/terminus": "^8.0.3",
+    "@prisma/client": "^3.7.0",
+    "@wildboar/ldap": "^1.2.7",
+    "@wildboar/scrypt-0": "^1.0.2",
+    "@wildboar/x500": "^1.0.36",
+    "asn1-ts": "^7.0.1",
+    "axios": "^0.24.0",
+    "chalk": "^4.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "date-fns": "^2.28.0",
+    "escape-html": "^1.0.3",
+    "fast-levenshtein": "^3.0.0",
+    "hbs": "^4.2.0",
+    "i18n-iso-countries": "^7.2.0",
+    "i18next": "^21.6.4",
+    "i18next-fs-backend": "^1.1.1",
+    "is-debugging": "^1.0.1",
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
+    "os-locale": "^5.0.0",
+    "pem-ts": "^3.0.0",
+    "phone": "^3.1.10",
+    "reflect-metadata": "^0.1.13",
+    "semver": "^7.3.5",
+    "sloc": "^0.2.1",
+    "swagger-ui-express": "^4.3.0",
+    "tslib": "^2.3.1",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3",
+    "yargs": "^17.3.1"
+  },
+  "devDependencies": {
+    "@nrwl/cli": "13.4.2",
+    "@types/escape-html": "^1.0.1",
+    "@nrwl/eslint-plugin-nx": "13.4.2",
+    "@types/express": "^4.17.13",
+    "@nrwl/jest": "13.4.2",
+    "@nrwl/linter": "13.4.2",
+    "@nrwl/node": "13.4.2",
+    "@nrwl/nx-cloud": "13.0.2",
+    "@nrwl/tao": "13.4.2",
+    "@nrwl/workspace": "13.4.2",
+    "@types/fast-levenshtein": "^0.0.2",
+    "@types/jest": "27.0.2",
+    "@types/js-yaml": "^4.0.5",
+    "@types/json-schema": "^7.0.9",
+    "@types/node": "^16.3.1",
+    "@types/safe-regex": "^1.1.3",
+    "@types/semver": "^7.3.9",
+    "@types/uuid": "^8.3.3",
+    "@types/yargs": "^16.0.4",
+    "@typescript-eslint/eslint-plugin": "5.9.0",
+    "@typescript-eslint/parser": "5.9.0",
+    "dotenv": "^10.0.0",
+    "eslint": "8.2.0",
+    "eslint-config-prettier": "8.3.0",
+    "jest": "27.2.3",
+    "json-schema-to-typescript": "^10.1.5",
+    "prettier": "2.3.2",
+    "prisma": "^3.7.0",
+    "ts-jest": "27.0.5",
+    "ts-node": "~10.1.0",
+    "typescript": "4.3.5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} apps/meerkat/src/prisma/seed.ts"
+  }
 }
+
