--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ MEERKAT_WEB_ADMIN_PORT=18080
 MEERKAT_IDM_PORT=4632
 MEERKAT_LDAP_PORT=1389
 # MEERKAT_LDAPS_PORT=1636
+# FIXME: Make this a chain!
 MEERKAT_SERVER_TLS_CERT=data/keypair/cert.pem
 MEERKAT_SERVER_TLS_KEY=data/keypair/key.pem
 MEERKAT_SIGNING_CERT_CHAIN=data/keypair/cert.pem
