Protect against DoS by large IDM fragments

--- a/.env
+++ b/.env
@@ -26,6 +26,7 @@ MEERKAT_ENTRIES_PER_SUBORDINATES_PAGE=100
 MEERKAT_TRANSCODE_VALUES_TO_DER=1
 MEERKAT_TRANSCODE_DISTINGUISHED_VALUES_TO_DER=1
 MEERKAT_OPEN_TOP_LEVEL=1
+MEERKAT_IDM_BUFFER_SIZE=1000000
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
 # LC_COLLATE=""
