--- a/.env
+++ b/.env
@@ -27,6 +27,7 @@ MEERKAT_TRANSCODE_VALUES_TO_DER=1
 MEERKAT_TRANSCODE_DISTINGUISHED_VALUES_TO_DER=1
 MEERKAT_OPEN_TOP_LEVEL=1
 MEERKAT_IDM_BUFFER_SIZE=1000000
+MEERKAT_LDAP_BUFFER_SIZE=1000000
 MEERKAT_MIN_AUTH_LEVEL_FOR_CHAINING=1
 MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_CHAINING=0
 NODE_ENV=development
