--- a/.env
+++ b/.env
@@ -30,6 +30,9 @@ MEERKAT_IDM_BUFFER_SIZE=1000000
 MEERKAT_LDAP_BUFFER_SIZE=1000000
 MEERKAT_MIN_AUTH_LEVEL_FOR_CHAINING=1
 MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_CHAINING=0
+MEERKAT_DANGEROUSLY_ENABLE_DSP=1
+MEERKAT_DANGEROUSLY_ENABLE_DOP=1
+MEERKAT_DSA_CAN_BIND_AS_NON_DSA=1
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
 # LC_COLLATE=""
