TCP and TLS options

--- a/.env
+++ b/.env
@@ -33,6 +33,10 @@ MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_CHAINING=0
 MEERKAT_DANGEROUSLY_ENABLE_DSP=1
 MEERKAT_DANGEROUSLY_ENABLE_DOP=1
 MEERKAT_DSA_CAN_BIND_AS_NON_DSA=1
+MEERKAT_TCP_TIMEOUT_IN_SECONDS=300
+MEERKAT_TCP_NO_DELAY=1
+MEERKAT_MAX_CONNECTIONS=100
+MEERKAT_TLS_HANDSHAKE_TIMEOUT_IN_SECONDS=15
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
 # LC_COLLATE=""
