--- a/.env
+++ b/.env
@@ -33,9 +33,14 @@ MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_CHAINING=0
 MEERKAT_DANGEROUSLY_ENABLE_DSP=1
 MEERKAT_DANGEROUSLY_ENABLE_DOP=1
 MEERKAT_DSA_CAN_BIND_AS_NON_DSA=1
-MEERKAT_TCP_TIMEOUT_IN_SECONDS=300
+MEERKAT_TCP_TIMEOUT_IN_SECONDS=30
 MEERKAT_TCP_NO_DELAY=1
 MEERKAT_MAX_CONNECTIONS=100
+MEERKAT_MAX_CONNECTIONS_PER_ADDRESS=5
+# 150 bytes/second is typical for AX.25 radio, so 100 bytes/second is still
+# generous enough for slow clients / poor connections while still preventing
+# Slow Loris attacks.
+MEERKAT_MIN_TRANSFER_SPEED_BYTES_PER_MINUTE=1000
 MEERKAT_TLS_HANDSHAKE_TIMEOUT_IN_SECONDS=15
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
