Forbig anonymous bind

--- a/.env
+++ b/.env
@@ -42,6 +42,7 @@ MEERKAT_MAX_CONNECTIONS_PER_ADDRESS=10
 # Slow Loris attacks.
 MEERKAT_MIN_TRANSFER_SPEED_BYTES_PER_MINUTE=1000
 MEERKAT_TLS_HANDSHAKE_TIMEOUT_IN_SECONDS=15
+MEERKAT_FORBID_ANONYMOUS_BIND=0
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
 # LC_COLLATE=""
