--- a/.env
+++ b/.env
@@ -27,6 +27,8 @@ MEERKAT_TRANSCODE_VALUES_TO_DER=1
 MEERKAT_TRANSCODE_DISTINGUISHED_VALUES_TO_DER=1
 MEERKAT_OPEN_TOP_LEVEL=1
 MEERKAT_IDM_BUFFER_SIZE=1000000
+MEERKAT_MAX_IDM_PDU_SIZE=1000000
+MEERKAT_MAX_IDM_SEGMENTS=10
 MEERKAT_LDAP_BUFFER_SIZE=1000000
 MEERKAT_MIN_AUTH_LEVEL_FOR_CHAINING=1
 MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_CHAINING=0
@@ -43,6 +45,7 @@ MEERKAT_MAX_CONNECTIONS_PER_ADDRESS=10
 MEERKAT_MIN_TRANSFER_SPEED_BYTES_PER_MINUTE=1000
 MEERKAT_TLS_HANDSHAKE_TIMEOUT_IN_SECONDS=15
 MEERKAT_FORBID_ANONYMOUS_BIND=0
+MEERKAT_MAX_CONCURRENT_OPERATIONS_PER_CONNECTION=5
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
 # LC_COLLATE=""
