--- a/apps/meerkat/package.json
+++ b/apps/meerkat/package.json
@@ -32,5 +32,8 @@
     },
     "prisma": {
         "seed": "ts-node src/prisma/seed.ts"
+    },
+    "engines": {
+        "node": ">=17.0.0"
     }
 }
