--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^2.28.0",
     "escape-html": "^1.0.3",
     "fast-levenshtein": "^3.0.0",
+    "fifo": "^2.4.1",
     "hbs": "^4.2.0",
     "i18n-iso-countries": "^7.2.0",
     "i18next": "^21.6.4",
@@ -63,7 +64,8 @@
     "tslib": "^2.3.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "yargs": "^17.3.1"
+    "yargs": "^17.3.1",
+    "yocto-queue": "^1.0.0"
   },
   "devDependencies": {
     "@nrwl/cli": "13.4.2",
