--- a/.env
+++ b/.env
@@ -46,6 +46,7 @@ MEERKAT_MIN_TRANSFER_SPEED_BYTES_PER_MINUTE=1000
 MEERKAT_TLS_HANDSHAKE_TIMEOUT_IN_SECONDS=15
 MEERKAT_FORBID_ANONYMOUS_BIND=0
 MEERKAT_MAX_CONCURRENT_OPERATIONS_PER_CONNECTION=5
+MEERKAT_IP_BLOCKLIST_REASONS=DOUBLE_STARTTLS,DOUBLE_BIND,SLOW_LORIS
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
 # LC_COLLATE=""
