Binding overhaul, part I
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -32,21 +32,22 @@ MEERKAT_MAX_IDM_SEGMENTS=10
 MEERKAT_LDAP_BUFFER_SIZE=1000000
 MEERKAT_MIN_AUTH_LEVEL_FOR_CHAINING=1
 MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_CHAINING=0
+MEERKAT_ENABLE_DAP=1
 MEERKAT_DANGEROUSLY_ENABLE_DSP=1
 MEERKAT_DANGEROUSLY_ENABLE_DOP=1
 MEERKAT_DSA_CAN_BIND_AS_NON_DSA=1
 MEERKAT_TCP_TIMEOUT_IN_SECONDS=30
 MEERKAT_TCP_NO_DELAY=1
 MEERKAT_MAX_CONNECTIONS=100
-MEERKAT_MAX_CONNECTIONS_PER_ADDRESS=10
+MEERKAT_MAX_CONNECTIONS_PER_ADDRESS=50
 # 150 bytes/second is typical for AX.25 radio, so 100 bytes/second is still
 # generous enough for slow clients / poor connections while still preventing
 # Slow Loris attacks.
 MEERKAT_MIN_TRANSFER_SPEED_BYTES_PER_MINUTE=1000
 MEERKAT_TLS_HANDSHAKE_TIMEOUT_IN_SECONDS=15
 MEERKAT_FORBID_ANONYMOUS_BIND=0
-MEERKAT_MAX_CONCURRENT_OPERATIONS_PER_CONNECTION=5
-MEERKAT_IP_BLOCKLIST_REASONS=DOUBLE_STARTTLS,DOUBLE_BIND,SLOW_LORIS
+MEERKAT_MAX_CONCURRENT_OPERATIONS_PER_CONNECTION=50
+# MEERKAT_IP_BLOCKLIST_REASONS=DOUBLE_STARTTLS,DOUBLE_BIND,SLOW_LORIS
 NODE_ENV=development
 # https://www.gnu.org/software/libc/manual/html_node/Locale-Categories.html#Locale-Categories
 # LC_COLLATE=""
