Pre-bind requests
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -45,6 +45,7 @@ MEERKAT_MAX_CONNECTIONS_PER_ADDRESS=50
 # Slow Loris attacks.
 MEERKAT_MIN_TRANSFER_SPEED_BYTES_PER_MINUTE=1000
 MEERKAT_TLS_HANDSHAKE_TIMEOUT_IN_SECONDS=15
+MEERKAT_MAX_PRE_BIND_REQUESTS=1
 MEERKAT_FORBID_ANONYMOUS_BIND=0
 MEERKAT_MAX_CONCURRENT_OPERATIONS_PER_CONNECTION=50
 # MEERKAT_IP_BLOCKLIST_REASONS=DOUBLE_STARTTLS,DOUBLE_BIND,SLOW_LORIS
