--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pem-ts": "^3.0.0",
     "phone": "^3.1.10",
     "reflect-metadata": "^0.1.13",
+    "safe-timers": "1.1.0",
     "semver": "^7.3.5",
     "sloc": "^0.2.1",
     "swagger-ui-express": "^4.3.0",
@@ -84,6 +85,7 @@
     "@types/json-schema": "^7.0.9",
     "@types/node": "^16.3.1",
     "@types/safe-regex": "^1.1.3",
+    "@types/safe-timers": "^1.1.0",
     "@types/semver": "^7.3.9",
     "@types/uuid": "^8.3.3",
     "@types/yargs": "^16.0.4",
