No more in-memory cache
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # DATABASE_URL=postgresql://postgres:example@localhost:5432/directory?schema=public
+# DATABASE_URL=mysql://root:example@localhost:3306/directory?connection_limit=40&pool_timeout=30
 DATABASE_URL=mysql://root:example@localhost:3306/directory
 MEERKAT_WEB_ADMIN_PORT=18080
 MEERKAT_IDM_PORT=4632
@@ -22,7 +23,7 @@ MEERKAT_MIN_AUTH_LEVEL_FOR_OB=1
 MEERKAT_MIN_AUTH_LOCAL_QUALIFIER_FOR_OB=128
 MEERKAT_MY_ACCESS_POINT_NSAPS=idm://demo.meerkat.wildboar.software:4632 ldap://demo.meerkat.wildboar.software:1389
 MEERKAT_USE_DATABASE_WHEN_THERE_ARE_X_SUBORDINATES=1000
-MEERKAT_ENTRIES_PER_SUBORDINATES_PAGE=100
+MEERKAT_ENTRIES_PER_SUBORDINATES_PAGE=5
 MEERKAT_TRANSCODE_VALUES_TO_DER=1
 MEERKAT_TRANSCODE_DISTINGUISHED_VALUES_TO_DER=1
 MEERKAT_OPEN_TOP_LEVEL=1
@@ -57,3 +58,5 @@ NODE_ENV=development
 LC_MESSAGES=en_US.utf8
 LC_ALL=en_US.utf8
 LANG=en_US.utf8
+# See: https://www.prisma.io/docs/concepts/components/prisma-client/debugging
+# DEBUG=*
