--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,6 @@
+# This Docker Compose file is for local testing, not actual deployment.
+# For the Docker Compose file suitable for production deployment, see:
+# `pkg/docker-compose.yaml`.
 version: '3.7'
 
 services:
@@ -21,7 +24,7 @@ services:
     labels:
       author: Wildboar Software
       app: meerkat
-      version: 1.0.0-beta.7
+      version: 1.0.0-beta.8
     ports:
       - '1389:389/tcp' # LDAP TCP Port
       - '4632:4632/tcp' # IDM Socket
