--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "date-fns": "^2.28.0",
     "escape-html": "^1.0.3",
     "fast-levenshtein": "^3.0.0",
-    "fifo": "^2.4.1",
     "hbs": "^4.2.0",
     "i18n-iso-countries": "^7.2.0",
     "i18next": "^21.6.4",
@@ -60,13 +59,10 @@
     "reflect-metadata": "^0.1.13",
     "safe-timers": "1.1.0",
     "semver": "^7.3.5",
-    "sloc": "^0.2.1",
     "swagger-ui-express": "^4.3.0",
-    "tslib": "^2.3.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "yargs": "^17.3.1",
-    "yocto-queue": "^1.0.0"
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@nrwl/cli": "13.4.2",
@@ -98,6 +94,8 @@
     "json-schema-to-typescript": "^10.1.5",
     "prettier": "2.3.2",
     "prisma": "^3.10.0",
+    "sloc": "^0.2.1",
+    "tslib": "^2.3.1",
     "ts-jest": "27.0.5",
     "ts-node": "~10.1.0",
     "typescript": "4.3.5"
