--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -7,6 +7,7 @@ metadata:
     {{- include "meerkat-dsa.labels" . | nindent 4 }}
 data:
   locale: {{ .Values.locale }}
+  logLevel: {{ .Values.logLevel | default "info" }}
   {{- if .Values.dapEnabled }}
   idmPort: "4632"
   idmsPort: "44632"
